--- a/versions/v2.12/modules/en/pages/rancher-admin/back-up-restore-and-disaster-recovery/back-up.adoc
+++ b/versions/v2.12/modules/en/pages/rancher-admin/back-up-restore-and-disaster-recovery/back-up.adoc
@@ -1,5 +1,5 @@
 = Backing up {rancher-product-name}
-:revdate: 2025-08-05
+:revdate: 2025-08-13
 :page-revdate: {revdate}
 :experimental:
 
@@ -70,7 +70,7 @@ To perform a backup, a custom resource of type Backup must be created.
        folder: rancher
        region: us-west-2
        endpoint: s3.us-west-2.amazonaws.com
-   resourceSetName: rancher-resource-set
+   resourceSetName: rancher-resource-set-full
    encryptionConfigSecretName: encryptionconfig
    schedule: "@every 1h"
    retentionCount: 10
@@ -79,7 +79,7 @@ To perform a backup, a custom resource of type Backup must be created.
 
 [NOTE]
 ====
-When creating the Backup resource using YAML editor, the `resourceSetName` must be set to `rancher-resource-set`
+When creating the Backup resource using YAML editor, the `resourceSetName` must be set to `rancher-resource-set-full` or `rancher-resource-set-basic`.
 ====
 
 +
