--- a/versions/v2.12/modules/zh/nav.adoc
+++ b/versions/v2.12/modules/zh/nav.adoc
@@ -91,6 +91,7 @@
 ***** xref:rancher-admin/users/authn-and-authz/jwt-authentication.adoc[]
 ***** xref:rancher-admin/users/authn-and-authz/configure-generic-oidc.adoc[]
 ***** xref:rancher-admin/users/authn-and-authz/configure-active-directory.adoc[]
+***** xref:rancher-admin/users/authn-and-authz/configure-amazon-cognito.adoc[]
 ***** xref:rancher-admin/users/authn-and-authz/configure-azure-ad.adoc[]
 ***** xref:rancher-admin/users/authn-and-authz/configure-freeipa.adoc[]
 ***** xref:rancher-admin/users/authn-and-authz/configure-github.adoc[]
