Sync Community PR #1839 (Add Tokens example workflows page)

--- a/versions/latest/modules/en/nav.adoc
+++ b/versions/latest/modules/en/nav.adoc
@@ -406,6 +406,7 @@
 * API
 ** xref:api/quickstart.adoc[]
 ** xref:api/workflows/projects.adoc[]
+** xref:api/workflows/tokens.adoc[]
 ** xref:api/reference.adoc[]
 ** xref:api/api-tokens.adoc[]
 ** xref:api/extension-apiserver.adoc[]
