--- a/versions/v2.12/modules/zh/nav.adoc
+++ b/versions/v2.12/modules/zh/nav.adoc
@@ -406,6 +406,7 @@
 * API
 ** xref:api/quickstart.adoc[]
 ** xref:api/workflows/projects.adoc[]
+** xref:api/workflows/tokens.adoc[]
 ** xref:api/reference.adoc[]
 ** xref:api/api-tokens.adoc[]
 ** xref:api/extension-apiserver.adoc[]
