Remove RKE reference in neuvector/overview

--- a/versions/latest/modules/en/pages/integrations/neuvector/overview.adoc
+++ b/versions/latest/modules/en/pages/integrations/neuvector/overview.adoc
@@ -1,5 +1,5 @@
 = Overview
-:revdate: 2025-01-08
+:revdate: 2025-08-15
 :page-revdate: {revdate}
 :experimental:
 
@@ -20,7 +20,6 @@ The Harvester Helm Chart is used to manage access to the NeuVector UI in Rancher
 
 Some examples are as follows:
 
-* RKE1: `docker`
 * K3s and RKE2: `k3scontainerd`
 * AKS: `containerd` for v1.19 and up
 * EKS: `docker` for v1.22 and below; `containerd` for v1.23 and up
@@ -111,31 +110,9 @@ Below are the minimum recommended computing resources for the NeuVector chart in
 
 == Hardened Cluster Support - Calico and Canal
 
-[tabs]
-======
-RKE1::
-+
---
-* All NeuVector components are deployable if PSP is set to true.
-+
-You will need to set additional configuration for your hardened cluster environment as follows:
 
-.. Click *☰ > Cluster Management*.
-.. Go to the cluster that you created and click *Explore*.
-.. In the left navigation bar, click *Apps*.
-.. Install (or upgrade to) NeuVector version `100.0.1+up2.2.2`.
+=== RKE2
 
-... Under *Edit Options* > *Other Configuration*, enable *Pod Security Policy* by checking the box (no other config needed):
-+
-image::psp-nv-rke.png[Enable PSP for RKE1 Hardened Cluster]
-
-
-.. Click *Install* at the bottom-right to complete.
---
-
-RKE2::
-+
---
 * NeuVector components Controller and Enforcer are deployable if PSP is set to true.
 
 *Applicable to NeuVector chart version 100.0.0+up2.2.0 only:*
@@ -163,8 +140,6 @@ image::psp-nv-rke2.png[Enable PSP for RKE2 and K3s Hardened Clusters]
 
 
  .. Click *Install* at the bottom-right to complete.
---
-======
 
 == SELinux-enabled Cluster Support - Calico and Canal
 
