--- a/versions/v2.12/modules/zh/pages/integrations/neuvector/overview.adoc
+++ b/versions/v2.12/modules/zh/pages/integrations/neuvector/overview.adoc
@@ -1,5 +1,5 @@
 = 概述
-:revdate: 2025-08-05
+:revdate: 2025-08-15
 :page-revdate: {revdate}
 :experimental:
 
@@ -114,30 +114,8 @@ image::neuvector-architecture.png[NeuVector 架构]
 
 == 强化集群支持 - Calico 和 Canal
 
-[tabs]
-======
-RKE1::
-+
---
-* 如果 PSP 设置为 true，则所有 NeuVector 组件都是可部署的。
-+
-你需要为强化集群环境进行额外的配置，如下所示：
+=== RKE2
 
-.. 单击 *☰ > 集群管理*。
-.. 选择你创建的集群，并点击 *Explore*。
-.. 在左侧导航栏中，点击 *Apps*。
-.. 安装（或升级到）NeuVector 版本 `100.0.1+up2.2.2`。
-
-... 在**编辑选项** > **其它配置**下，选中复选框来启用 *Pod 安全策略*（无需其他配置）：
-+
-image::psp-nv-rke.png[为 RKE1 强化集群启用 PSP]
-
-.. 点击右下角的**安装**。
---
-
-RKE2::
-+
---
 * 如果 PSP 设置为 true，则可以部署 NeuVector 组件 Controller 和 Enforcer。
 
 *仅适用于 NeuVector Chart 版本 100.0.0+up2.2.0：*
@@ -166,8 +144,6 @@ ____
 image::psp-nv-rke2.png[为 RKE2 和 K3s 强化集群启用 PSP]
 
 .. 点击右下角的**安装**。
---
-======
 
 == 启用 SELinux 的集群支持 - Calico 和 Canal
 
