--- a/versions/v2.12/modules/en/pages/observability/monitoring-and-dashboards/how-monitoring-works.adoc
+++ b/versions/v2.12/modules/en/pages/observability/monitoring-and-dashboards/how-monitoring-works.adoc
@@ -1,5 +1,5 @@
 = How Monitoring Works
-:revdate: 2025-08-05
+:revdate: 2025-08-15
 :page-revdate: {revdate}
 
 == 1. Architecture Overview
@@ -214,7 +214,7 @@ The following Kubernetes components are directly scraped by Prometheus:
 
 * You can optionally use `hardenedKubelet.enabled` to use a PushProx, but that is not the default.
 
-** For RKE and RKE2 clusters, ingress-nginx is deployed by default and treated as an internal Kubernetes component.
+** For RKE2 clusters, ingress-nginx is deployed by default and treated as an internal Kubernetes component.
 
 === Scraping Metrics Based on Kubernetes Distribution
 
@@ -222,28 +222,24 @@ Metrics are scraped differently based on the Kubernetes distribution. For help w
 
 .How Metrics are Exposed to Prometheus
 |===
-| Kubernetes Component | RKE | RKE2 | KubeADM | K3s
+| Kubernetes Component | RKE2 | KubeADM | K3s
 
 | kube-controller-manager
-| rkeControllerManager.enabled
 | rke2ControllerManager.enabled
 | kubeAdmControllerManager.enabled
 | k3sServer.enabled
 
 | kube-scheduler
-| rkeScheduler.enabled
 | rke2Scheduler.enabled
 | kubeAdmScheduler.enabled
 | k3sServer.enabled
 
 | etcd
-| rkeEtcd.enabled
 | rke2Etcd.enabled
 | kubeAdmEtcd.enabled
 | Not available
 
 | kube-proxy
-| rkeProxy.enabled
 | rke2Proxy.enabled
 | kubeAdmProxy.enabled
 | k3sServer.enabled
@@ -252,10 +248,8 @@ Metrics are scraped differently based on the Kubernetes distribution. For help w
 | Collects metrics directly exposed by kubelet
 | Collects metrics directly exposed by kubelet
 | Collects metrics directly exposed by kubelet
-| Collects metrics directly exposed by kubelet
 
 | ingress-nginx*
-| Collects metrics directly exposed by kubelet, exposed by rkeIngressNginx.enabled
 | Collects metrics directly exposed by kubelet, Exposed by rke2IngressNginx.enabled
 | Not available
 | Not available
@@ -264,16 +258,14 @@ Metrics are scraped differently based on the Kubernetes distribution. For help w
 | Collects metrics directly exposed by coreDns/kubeDns
 | Collects metrics directly exposed by coreDns/kubeDns
 | Collects metrics directly exposed by coreDns/kubeDns
-| Collects metrics directly exposed by coreDns/kubeDns
 
 | kube-api-server
-| Collects metrics directly exposed by kube-api-server
 | Collects metrics directly exposed by kube-api-server
 | Collects metrics directly exposed by kube-appi-server
 | Collects metrics directly exposed by kube-api-server
 |===
 
-* For RKE and RKE2 clusters, ingress-nginx is deployed by default and treated as an internal Kubernetes component.
+* For RKE2 clusters, ingress-nginx is deployed by default and treated as an internal Kubernetes component.
 
 === Terminology
 
