Removing from /api en and zh versions.
Signed-off-by: Sunil Singh <sunil.singh@suse.com>

--- a/versions/v2.12/modules/en/pages/api/v3-rancher-api-guide.adoc
+++ b/versions/v2.12/modules/en/pages/api/v3-rancher-api-guide.adoc
@@ -1,5 +1,5 @@
 = Previous v3 {rancher-product-name} API Guide
-:revdate: 2025-08-05
+:revdate: 2025-08-18
 :page-revdate: {revdate}
 
 Rancher v2.8.0 introduced the Rancher Kubernetes API (RK-API). The previous v3 Rancher API is still available. This page describes the v3 API. For more information on RK-API, see the xref:api/quickstart.adoc[RK-API quickstart] and xref:api/reference.adoc[reference guide].
@@ -57,7 +57,7 @@ API responses are paginated with a limit of 100 resources per page by default. T
 
 == Capturing v3 API Calls
 
-You can use browser developer tools to capture how the v3 API is called. For example, you could follow these steps to use the Chrome developer tools to get the API call for provisioning an RKE cluster:
+You can use browser developer tools to capture how the v3 API is called. For example, you could follow these steps to use the Chrome developer tools to get the API call for provisioning a Rancher Kubernetes distribution cluster:
 
 . In the Rancher UI, go to *Cluster Management* and click *Create.*
 . Click one of the cluster types. This example uses Digital Ocean.
