Syncing RKE1 removals/updates from /faq section, and updated a CVE page link.
Signed-off-by: Sunil Singh <sunil.singh@suse.com>

--- a/versions/latest/modules/en/pages/faq/container-network-interface-providers.adoc
+++ b/versions/latest/modules/en/pages/faq/container-network-interface-providers.adoc
@@ -1,5 +1,5 @@
 = Container Network Interface (CNI) Providers
-:revdate: 2025-03-03
+:revdate: 2025-08-18
 :page-revdate: {revdate}
 :description: Learn about Container Network Interface (CNI), the CNI providers Rancher provides, the features they offer, and how to choose a provider for you
 
@@ -43,60 +43,9 @@ image::unencapsulated-network.png[Unencapsulated Network]
 
 == What CNI Providers are Provided by Rancher?
 
-=== RKE Kubernetes clusters
-
-Out-of-the-box, Rancher provides the following CNI network providers for RKE Kubernetes clusters: Canal, Flannel, Calico, and Weave.
-
-You can choose your CNI network provider when you create new Kubernetes clusters from Rancher.
-
-==== Canal
-
-image::canal-logo.png[Canal Logo]
-
-Canal is a CNI network provider that gives you the best of Flannel and Calico. It allows users to easily deploy Calico and Flannel networking together as a unified networking solution, combining Calico's network policy enforcement with the rich superset of Calico (unencapsulated) and/or Flannel (encapsulated) network connectivity options.
-
-In Rancher, Canal is the default CNI network provider combined with Flannel and VXLAN encapsulation.
-
-Kubernetes workers should open UDP port `8472` (VXLAN) and TCP port `9099` (health checks). If using Wireguard, you should open UDP ports `51820` and `51821`. For more details, refer to xref:cluster-deployment/node-requirements.adoc[the port requirements for user clusters].
-
-image::canal-diagram.png[]
-
-For more information, see the https://github.com/projectcalico/canal[Canal GitHub Page.]
-
-==== Flannel
-
-image::flannel-logo.png[Flannel Logo]
-
-Flannel is a simple and easy way to configure L3 network fabric designed for Kubernetes. Flannel runs a single binary agent named flanneld on each host, which is responsible for allocating a subnet lease to each host out of a larger, preconfigured address space. Flannel uses either the Kubernetes API or etcd directly to store the network configuration, the allocated subnets, and any auxiliary data (such as the host's public IP). Packets are forwarded using one of several backend mechanisms, with the default encapsulation being https://github.com/flannel-io/flannel/blob/master/Documentation/backends.md#vxlan[VXLAN].
-
-Encapsulated traffic is unencrypted by default. Flannel provides two solutions for encryption:
-
-* https://github.com/flannel-io/flannel/blob/master/Documentation/backends.md#ipsec[IPSec], which makes use of https://www.strongswan.org/[strongSwan] to establish encrypted IPSec tunnels between Kubernetes workers. It is an experimental backend for encryption.
-* https://github.com/flannel-io/flannel/blob/master/Documentation/backends.md#wireguard[WireGuard], which is a more faster-performing alternative to strongSwan.
-
-Kubernetes workers should open UDP port `8472` (VXLAN). See xref:cluster-deployment/node-requirements.adoc#_networking_requirements[the port requirements for user clusters] for more details.
-
-image::flannel-diagram.png[Flannel Diagram]
-
-For more information, see the https://github.com/flannel-io/flannel[Flannel GitHub Page].
-
-==== Weave
-
-include::shared:ROOT:partial$en/deprecation-weave.adoc[]
-
-image::weave-logo.png[Weave Logo]
-
-Weave enables networking and network policy in Kubernetes clusters across the cloud. Additionally, it support encrypting traffic between the peers.
-
-Kubernetes workers should open TCP port `6783` (control port), UDP port `6783` and UDP port `6784` (data ports). See the xref:cluster-deployment/node-requirements.adoc#_networking_requirements[port requirements for user clusters] for more details.
-
-For more information, see the following pages:
-
-* https://github.com/weaveworks/weave/blob/master/site/overview.md[Weave Net Official Site]
-
 === {rke2-product-name} Kubernetes clusters
 
-Out-of-the-box, Rancher provides the following CNI network providers for RKE2 Kubernetes clusters: <<_canal,Canal>> (see above section), Calico, and Cilium.
+Out-of-the-box, Rancher provides the following CNI network providers for RKE2 Kubernetes clusters: Calico, Canal, Cilium, and Flannel.
 
 You can choose your CNI network provider when you create new Kubernetes clusters from Rancher.
 
@@ -128,6 +77,20 @@ For more information, see the following pages:
 * https://www.projectcalico.org/[Project Calico Official Site]
 * https://github.com/projectcalico/calico[Project Calico GitHub Page]
 
+==== Canal
+
+image::canal-logo.png[Canal Logo]
+
+Canal is a CNI network provider that gives you the best of Flannel and Calico. It allows users to easily deploy Calico and Flannel networking together as a unified networking solution, combining Calico's network policy enforcement with the rich superset of Calico (unencapsulated) and/or Flannel (encapsulated) network connectivity options.
+
+In Rancher, Canal is the default CNI network provider combined with Flannel and VXLAN encapsulation.
+
+Kubernetes workers should open UDP port `8472` (VXLAN) and TCP port `9099` (health checks). If using Wireguard, you should open UDP ports `51820` and `51821`. For more details, refer to xref:cluster-deployment/node-requirements.adoc[the port requirements for user clusters].
+
+image::canal-diagram.png[]
+
+For more information, see the https://github.com/projectcalico/canal[Canal GitHub Page.]
+
 ==== Cilium
 
 image::cilium-logo.png[Cilium Logo]
@@ -135,6 +98,23 @@ image::cilium-logo.png[Cilium Logo]
 Cilium enables networking and network policies (L3, L4, and L7) in Kubernetes. By default, Cilium uses eBPF technologies to route packets inside the node and VXLAN to send packets to other nodes. Unencapsulated techniques can also be configured.
 
 Cilium recommends kernel versions greater than 5.2 to be able to leverage the full potential of eBPF. Kubernetes workers should open TCP port `8472` for VXLAN and TCP port `4240` for health checks. In addition, ICMP 8/0 must be enabled for health checks. For more information, check https://docs.cilium.io/en/latest/operations/system_requirements/#firewall-requirements[Cilium System Requirements].
+
+==== Flannel
+
+image::flannel-logo.png[Flannel Logo]
+
+Flannel is a simple and easy way to configure L3 network fabric designed for Kubernetes. Flannel runs a single binary agent named flanneld on each host, which is responsible for allocating a subnet lease to each host out of a larger, preconfigured address space. Flannel uses either the Kubernetes API or etcd directly to store the network configuration, the allocated subnets, and any auxiliary data (such as the host's public IP). Packets are forwarded using one of several backend mechanisms, with the default encapsulation being https://github.com/flannel-io/flannel/blob/master/Documentation/backends.md#vxlan[VXLAN].
+
+Encapsulated traffic is unencrypted by default. Flannel provides two solutions for encryption:
+
+* https://github.com/flannel-io/flannel/blob/master/Documentation/backends.md#ipsec[IPSec], which makes use of https://www.strongswan.org/[strongSwan] to establish encrypted IPSec tunnels between Kubernetes workers. It is an experimental backend for encryption.
+* https://github.com/flannel-io/flannel/blob/master/Documentation/backends.md#wireguard[WireGuard], which is a more faster-performing alternative to strongSwan.
+
+Kubernetes workers should open UDP port `8472` (VXLAN). See xref:cluster-deployment/node-requirements.adoc#_networking_requirements[the port requirements for user clusters] for more details.
+
+image::flannel-diagram.png[Flannel Diagram]
+
+For more information, see the https://github.com/flannel-io/flannel[Flannel GitHub Page].
 
 ===== Ingress Routing Across Nodes in Cilium
 
@@ -229,4 +209,4 @@ Canal is the default CNI network provider. We recommend it for most use cases. I
 
 == How can I configure a CNI network provider?
 
-Please see xref:cluster-deployment/configuration/rke1.adoc[Cluster Options] on how to configure a network provider for your cluster. For more advanced configuration options, please see how to configure your cluster using a xref:cluster-deployment/configuration/rke1.adoc#_rke_cluster_config_file_reference[Config File] and the options for https://rancher.com/docs/rke/latest/en/config-options/add-ons/network-plugins/[Network Plug-ins].
+Please see xref:cluster-deployment/configuration/rke2.adoc[Cluster Options] on how to configure a network provider for your cluster. For more advanced configuration options, please see how to configure your cluster using a xref:cluster-deployment/configuration/rke2.adoc#_cluster_config_file_reference[Config File].
