--- a/versions/latest/modules/zh/pages/faq/container-network-interface-providers.adoc
+++ b/versions/latest/modules/zh/pages/faq/container-network-interface-providers.adoc
@@ -1,5 +1,5 @@
 = CNI 网络插件
-:revdate: 2025-03-03
+:revdate: 2025-08-18
 :page-revdate: {revdate}
 :description: 了解容器网络接口 (CNI)、Rancher 提供的 CNI 网络插件、提供商的功能，以及如何选择网络提供商
 
@@ -43,60 +43,9 @@ image::unencapsulated-network.png[非封装网络]
 
 == Rancher 提供哪些 CNI 插件？
 
-=== RKE Kubernetes 集群
-
-Rancher 开箱即用地为 RKE Kubernetes 集群提供了几个 CNI 网络插件，分别是 Canal、Flannel、Calico 和 Weave。
-
-如果你使用 Rancher 创建新的 Kubernetes 集群，你可以选择你的 CNI 网络插件。
-
-==== Canal
-
-image::canal-logo.png[Canal Logo]
-
-Canal 是一个 CNI 网络插件，它很好地结合了 Flannel 和 Calico 的优点。它让你轻松地将 Calico 和 Flannel 网络部署为统一的网络解决方案，将 Calico 的网络策略执行与 Calico（未封装）和 Flannel（封装）丰富的网络连接选项结合起来。
-
-Canal 是 Rancher 默认的 CNI 网络插件，并采用了 Flannel 和 VXLAN 封装。
-
-Kubernetes Worker 需要打开 UDP 端口 `8472` (VXLAN) 和 TCP 端口 `9099`（健康检查）。如果使用 Wireguard，则需要打开 UDP 端口 `51820` 和 `51821`。有关详细信息，请参阅xref:cluster-deployment/node-requirements.adoc[下游集群的端口要求]。
-
-image::canal-diagram.png[]
-
-有关详细信息，请参阅 https://github.com/projectcalico/canal[Canal GitHub 页面]。
-
-==== Flannel
-
-image::flannel-logo.png[Flannel Logo]
-
-Flannel 是为 Kubernetes 配置 L3 网络结构的简单方法。Flannel 在每台主机上运行一个名为 flanneld 的二进制 Agent，该 Agent 负责从更大的预配置地址空间中为每台主机分配子网租约。Flannel 通过 Kubernetes API 或直接使用 etcd 来存储网络配置、分配的子网、以及其他辅助数据（例如主机的公共 IP）。数据包使用某种后端机制来转发，默认封装为 https://github.com/flannel-io/flannel/blob/master/Documentation/backends.md#vxlan[VXLAN]。
-
-默认情况下，封装的流量是不加密的。Flannel 提供了两种加密方案：
-
-* https://github.com/flannel-io/flannel/blob/master/Documentation/backends.md#ipsec[IPSec]：使用 https://www.strongswan.org/[strongSwan] 在 Kubernetes worker 之间建立加密的 IPSec 隧道。它是加密的实验性后端。
-* https://github.com/flannel-io/flannel/blob/master/Documentation/backends.md#wireguard[WireGuard]：比 strongSwan 更快的替代方案。
-
-Kubernetes Worker 需要打开 UDP 端口 `8472` (VXLAN)。有关详细信息，请参阅xref:cluster-deployment/node-requirements.adoc#_网络要求[下游集群的端口要求]。
-
-image::flannel-diagram.png[Flannel Diagram]
-
-有关详细信息，请参阅 https://github.com/flannel-io/flannel[Flannel GitHub 页面]。
-
-==== Weave
-
-include::shared:ROOT:partial$zh/deprecation-weave.adoc[]
-
-image::weave-logo.png[Weave Logo]
-
-Weave 在云上的 Kubernetes 集群中启用网络和网络策略。此外，它还支持加密对等节点之间的流量。
-
-Kubernetes worker 需要打开 TCP 端口 `6783`（控制端口）、UDP 端口 `6783` 和 UDP 端口 `6784`（数据端口）。有关详细信息，请参阅xref:cluster-deployment/node-requirements.adoc#_网络要求[下游集群的端口要求]。
-
-有关详细信息，请参阅以下页面：
-
-* https://github.com/weaveworks/weave/blob/master/site/overview.md[Weave Net 官网]
-
 === {rke2-product-name} Kubernetes 集群
 
-Rancher 开箱即用地为 RKE2 Kubernetes 集群提供了几个 CNI 网络插件，分别是 <<_canal,Canal>>（见上一节）、Calico 和 Cilium。
+Out-of-the-box, Rancher provides the following CNI network providers for RKE2 Kubernetes clusters: Calico, Canal, Cilium, and Flannel.
 
 如果你使用 Rancher 创建新的 Kubernetes 集群，你可以选择你的 CNI 网络插件。
 
@@ -128,6 +77,20 @@ image::calico-diagram.svg[Calico Diagram]
 * https://www.projectcalico.org/[Project Calico 官方网站]
 * https://github.com/projectcalico/calico[Calico 项目 GitHub 页面]
 
+==== Canal
+
+image::canal-logo.png[Canal Logo]
+
+Canal 是一个 CNI 网络插件，它很好地结合了 Flannel 和 Calico 的优点。它让你轻松地将 Calico 和 Flannel 网络部署为统一的网络解决方案，将 Calico 的网络策略执行与 Calico（未封装）和 Flannel（封装）丰富的网络连接选项结合起来。
+
+Canal 是 Rancher 默认的 CNI 网络插件，并采用了 Flannel 和 VXLAN 封装。
+
+Kubernetes Worker 需要打开 UDP 端口 `8472` (VXLAN) 和 TCP 端口 `9099`（健康检查）。如果使用 Wireguard，则需要打开 UDP 端口 `51820` 和 `51821`。有关详细信息，请参阅xref:cluster-deployment/node-requirements.adoc[下游集群的端口要求]。
+
+image::canal-diagram.png[]
+
+有关详细信息，请参阅 https://github.com/projectcalico/canal[Canal GitHub 页面]。
+
 ==== Cilium
 
 image::cilium-logo.png[Cilium Logo]
@@ -135,6 +98,23 @@ image::cilium-logo.png[Cilium Logo]
 Cilium 在 Kubernetes 中启用网络和网络策略（L3、L4 和 L7）。默认情况下，Cilium 使用 eBPF 技术在节点内部路由数据包，并使用 VXLAN 将数据包发送到其他节点。你也可以配置非封装的技术。
 
 Cilium 推荐大于 5.2 的内核版本，从而充分利用 eBPF 的能力。Kubernetes worker 需要打开 TCP 端口 `8472`（VXLAN）和 TCP 端口 `4240`（健康检查）。此外，还必须为健康检查启用 ICMP 8/0。有关详细信息，请查看 https://docs.cilium.io/en/latest/operations/system_requirements/#firewall-requirements[Cilium 系统要求]。
+
+==== Flannel
+
+image::flannel-logo.png[Flannel Logo]
+
+Flannel 是为 Kubernetes 配置 L3 网络结构的简单方法。Flannel 在每台主机上运行一个名为 flanneld 的二进制 Agent，该 Agent 负责从更大的预配置地址空间中为每台主机分配子网租约。Flannel 通过 Kubernetes API 或直接使用 etcd 来存储网络配置、分配的子网、以及其他辅助数据（例如主机的公共 IP）。数据包使用某种后端机制来转发，默认封装为 https://github.com/flannel-io/flannel/blob/master/Documentation/backends.md#vxlan[VXLAN]。
+
+默认情况下，封装的流量是不加密的。Flannel 提供了两种加密方案：
+
+* https://github.com/flannel-io/flannel/blob/master/Documentation/backends.md#ipsec[IPSec]：使用 https://www.strongswan.org/[strongSwan] 在 Kubernetes worker 之间建立加密的 IPSec 隧道。它是加密的实验性后端。
+* https://github.com/flannel-io/flannel/blob/master/Documentation/backends.md#wireguard[WireGuard]：比 strongSwan 更快的替代方案。
+
+Kubernetes Worker 需要打开 UDP 端口 `8472` (VXLAN)。有关详细信息，请参阅xref:cluster-deployment/node-requirements.adoc#_网络要求[下游集群的端口要求]。
+
+image::flannel-diagram.png[Flannel Diagram]
+
+有关详细信息，请参阅 https://github.com/flannel-io/flannel[Flannel GitHub 页面]。
 
 ===== Cilium 中跨节点的 Ingress 路由
 
@@ -229,4 +209,4 @@ Canal 是默认的 CNI 网络插件。对于大多数用例，我们推荐你使
 
 == 如何配置 CNI 网络插件？
 
-如需了解如何为你的集群配置网络插件，请参阅xref:cluster-deployment/configuration/rke1.adoc[集群选项]。有关更高级的配置选项，请参阅有关使用xref:cluster-deployment/configuration/rke1.adoc#_rke_集群配置文件参考[配置文件]和link:https://rancher.com/docs/rke/latest/en/config-options/add-ons/network-plugins/[网络插件]选项来配置集群的说明。
+如需了解如何为你的集群配置网络插件，请参阅xref:cluster-deployment/configuration/rke2.adoc[集群选项]。有关更高级的配置选项，请参阅有关使用xref:cluster-deployment/configuration/rke2.adoc#_集群配置文件参考[配置文件].
