--- a/versions/v2.12/modules/en/pages/faq/technical-items.adoc
+++ b/versions/v2.12/modules/en/pages/faq/technical-items.adoc
@@ -1,5 +1,5 @@
 = Technical FAQ
-:revdate: 2025-08-05
+:revdate: 2025-08-18
 :page-revdate: {revdate}
 
 == How can I reset the administrator password?
@@ -52,7 +52,7 @@ The Layer-4 Load Balancer is created as `type: LoadBalancer`. In Kubernetes, thi
 == Where is the state of Rancher stored?
 
 * Docker Install: in the embedded etcd of the `rancher/rancher` container, located at `/var/lib/rancher`.
-* Kubernetes install: in the etcd of the RKE cluster created to run Rancher.
+* Kubernetes install: default location is in the `/var/lib/rancher/rke2` or `/var/lib/rancher/k3s` directories of the respective RKE2/K3s cluster created to run Rancher.
 
 == How are the supported Docker versions determined?
 
@@ -85,7 +85,7 @@ When the node is removed from the cluster, and the node is cleaned, you can read
 
 == How can I add more arguments/binds/environment variables to Kubernetes components in a Rancher Launched Kubernetes cluster?
 
-You can add more arguments/binds/environment variables via the xref:cluster-deployment/configuration/rke1.adoc#_rke_cluster_config_file_reference[Config File] option in Cluster Options. For more information, see the https://rancher.com/docs/rke/latest/en/config-options/services/services-extras/[Extra Args, Extra Binds, and Extra Environment Variables] in the RKE documentation or browse the https://rancher.com/docs/rke/latest/en/example-yamls/[Example Cluster.ymls].
+You can add more arguments/binds/environment variables via the respective xref:cluster-deployment/configuration/rke2.adoc#_cluster_configuration[RKE2 Config File] or xref:cluster-deployment/configuration/k3s.adoc#_cluster_configuration[K3s Config File].
 
 == How do I check if my certificate chain is valid?
 
