--- a/versions/v2.12/modules/zh/pages/faq/rancher-is-no-longer-needed.adoc
+++ b/versions/v2.12/modules/zh/pages/faq/rancher-is-no-longer-needed.adoc
@@ -1,5 +1,5 @@
 = 卸载 {rancher-product-name}
-:revdate: 2025-08-05
+:revdate: 2024-08-18
 :page-revdate: {revdate}
 
 本文介绍了如果你不再需要 Rancher、不想再由 Rancher 管理集群、或想删除 Rancher Server 需要怎么做。
@@ -12,9 +12,9 @@
 
 如果删除了 Rancher，访问下游集群的方式取决于集群的类型和集群的创建方式。总而言之：
 
-* *注册集群*：集群不受影响，你可以注册集群前的方法访问该集群。
+* *Registered/Imported clusters:*：集群不受影响，你可以注册集群前的方法访问该集群。
 * *托管的 Kubernetes 集群*：如果你在 Kubernetes 云提供商（例如 EKS、GKE 或 AKS）中创建集群，你可以继续使用提供商的云凭证来管理集群。
-* *RKE 集群*：要访问 xref:cluster-deployment/launch-kubernetes-with-rancher.adoc[RKE 集群]，集群必须启用了xref:about-rancher/architecture/communicating-with-downstream-clusters.adoc#_4_授权集群端点[授权集群端点（authorized cluster endpoint，ACE）]，而且你必须从 Rancher UI 下载了集群的 kubeconfig 文件。RKE 集群默认启用授权集群端点。通过使用此端点，你可以直接使用 kubectl 访问你的集群，而不用通过 Rancher Server 的xref:about-rancher/architecture/communicating-with-downstream-clusters.adoc#_1_认证代理[认证代理]进行通信。有关配置 kubectl 以使用授权集群端点的说明，请参阅xref:cluster-admin/manage-clusters/access-clusters/use-kubectl-and-kubeconfig.adoc#_直接使用下游集群进行身份验证[使用 kubectl 和 kubeconfig 文件直接访问集群]。这些集群将使用删除 Rancher 时配置的身份验证快照。
+* *Rancher provisioned clusters*：要访问 xref:cluster-deployment/launch-kubernetes-with-rancher.adoc[RKE2/K3s 集群]，集群必须启用了xref:about-rancher/architecture/communicating-with-downstream-clusters.adoc#_4_授权集群端点[授权集群端点（authorized cluster endpoint，ACE）]，而且你必须从 Rancher UI 下载了集群的 kubeconfig 文件。RKE 集群默认启用授权集群端点。通过使用此端点，你可以直接使用 kubectl 访问你的集群，而不用通过 Rancher Server 的xref:about-rancher/architecture/communicating-with-downstream-clusters.adoc#_1_认证代理[认证代理]进行通信。有关配置 kubectl 以使用授权集群端点的说明，请参阅xref:cluster-admin/manage-clusters/access-clusters/use-kubectl-and-kubeconfig.adoc#_直接使用下游集群进行身份验证[使用 kubectl 和 kubeconfig 文件直接访问集群]。这些集群将使用删除 Rancher 时配置的身份验证快照。
 
 == 如果我不想再使用 Rancher 了该怎么做？
 
@@ -52,7 +52,7 @@
 
 *结果*：注册的集群已与 Rancher 分离，并在 Rancher 外正常运行。
 
-== 如果我不想 Rancher 管理我的 RKE 集群或托管的 Kubernetes 集群该怎么办？
+== What if I don't want my hosted Kubernetes cluster managed by Rancher?
 
 目前，我们没有将这些集群从 Rancher 中分离出来的功能。在这种情况下，"`分离`"指的是将 Rancher 组件移除出集群，并独立于 Rancher 管理对集群的访问。
 
