--- a/versions/v2.12/modules/en/pages/faq/install-and-configure-kubectl.adoc
+++ b/versions/v2.12/modules/en/pages/faq/install-and-configure-kubectl.adoc
@@ -1,5 +1,5 @@
 = Installing and Configuring kubectl
-:revdate: 2025-08-05
+:revdate: 2025-08-18
 :page-revdate: {revdate}
 
 `kubectl` is a CLI utility for running commands against Kubernetes clusters. It's required for many maintenance and administrative tasks in Rancher 2.x.
@@ -10,13 +10,7 @@ See https://kubernetes.io/docs/tasks/tools/install-kubectl/[kubectl Installation
 
 == Configuration
 
-When you create a Kubernetes cluster with RKE, RKE creates a `kube_config_cluster.yml` in the local directory that contains credentials to connect to your new cluster with tools like `kubectl` or `helm`.
-
-You can copy this file as `$HOME/.kube/config` or if you are working with multiple Kubernetes clusters, set the `KUBECONFIG` environmental variable to the path of `kube_config_cluster.yml`.
-
-----
-export KUBECONFIG=$(pwd)/kube_config_cluster.yml
-----
+When you create a Kubernetes cluster with RKE2/K3s, the Kubeconfig file is stored at `/etc/rancher/rke2/rke2.yaml` or `/etc/rancher/k3s/k3s.yaml` depending on your chosen distribution. These files are used to configure access to the Kubernetes cluster.
 
 Test your connectivity with `kubectl` and see if you can get the list of nodes back.
 
