--- a/versions/v2.12/modules/zh/pages/faq/install-and-configure-kubectl.adoc
+++ b/versions/v2.12/modules/zh/pages/faq/install-and-configure-kubectl.adoc
@@ -1,5 +1,5 @@
 = 安装和配置 kubectl
-:revdate: 2025-08-05
+:revdate: 2025-08-18
 :page-revdate: {revdate}
 
 `kubectl` 是一个 CLI 工具，用于运行 Kubernetes 集群相关的命令。Rancher 2.x 中的许多维护和管理任务都需要它。
@@ -10,13 +10,7 @@
 
 == 配置
 
-使用 RKE 创建 Kubernetes 集群时，RKE 会在本地目录中创建一个 `kube_config_cluster.yml`，该文件包含使用 `kubectl` 或 `helm` 等工具连接到新集群的凭证。
-
-你可以将此文件复制为 `$HOME/.kube/config`。如果你使用多个 Kubernetes 集群，将 `KUBECONFIG` 环境变量设置为 `kube_config_cluster.yml` 的路径：
-
-----
-export KUBECONFIG=$(pwd)/kube_config_cluster.yml
-----
+When you create a Kubernetes cluster with RKE2/K3s, the Kubeconfig file is stored at `/etc/rancher/rke2/rke2.yaml` or `/etc/rancher/k3s/k3s.yaml` depending on your chosen distribution. These files are used to configure access to the Kubernetes cluster.
 
 使用 `kubectl` 测试你的连接性，并查看你是否可以获取节点列表：
 
