--- a/versions/v2.12/modules/en/nav.adoc
+++ b/versions/v2.12/modules/en/nav.adoc
@@ -83,6 +83,7 @@
 *** xref:installation-and-upgrade/troubleshooting/certificate-troubleshooting.adoc[]
 *** xref:installation-and-upgrade/troubleshooting/rancher-ha.adoc[]
 * xref:rancher-admin/rancher-admin.adoc[Rancher Administration]
+** xref:rancher-admin/scc-registration.adoc[]
 ** User Management
 *** xref:rancher-admin/users/authn-and-authz/authn-and-authz.adoc[]
 **** xref:rancher-admin/users/authn-and-authz/manage-users-and-groups.adoc[]
