--- a/versions/v2.12/modules/en/pages/rancher-admin/scc-registration.adoc
+++ b/versions/v2.12/modules/en/pages/rancher-admin/scc-registration.adoc
@@ -11,7 +11,7 @@ Registering your Rancher Manager instance with SUSE Customer Center requires a S
 You must also have access your organization. To join your organization, you may either:
 
 * Ask your organization's administrator to add you to the account. See our https://scc.suse.com/docs/userguide#UG-Requesting-Access-to-an-Organizations-Account[documentation] for details.
-* If you know one of your organization's registration codes, enter it when promted.
+* If you know one of your organization's registration codes, enter it when prompted.
 
 == Register with SUSE Customer Center
 
