--- a/versions/v2.12/modules/en/pages/rancher-admin/scc-registration.adoc
+++ b/versions/v2.12/modules/en/pages/rancher-admin/scc-registration.adoc
@@ -2,7 +2,7 @@
 :revdate: 2025-08-19
 :page-revdate: {revdate}
 
-In Rancher v2.12.1, you can now register your SUSE Rancher Manager Prime Suite with https://scc.suse.com/home[SUSE Customer Center (SCC)] from the Rancher UI. This will enable you to access the add-ons included in subscriptions purchased by your organization, open support cases and download the latest software updates and patches. 
+Since Rancher v2.12.1, you should now register your SUSE Rancher Manager Prime Suite with https://scc.suse.com/home[SUSE Customer Center (SCC)] from the Rancher UI. This will enable you to see your registered systems in SCC under your subscription.
 
 == Prequsities
 
