Add missing flag to enable auditlog

--- a/versions/v2.12/modules/en/pages/installation-and-upgrade/references/helm-chart-options.adoc
+++ b/versions/v2.12/modules/en/pages/installation-and-upgrade/references/helm-chart-options.adoc
@@ -1,5 +1,5 @@
 = {rancher-product-name} Helm Chart Options
-:revdate: 2025-08-05
+:revdate: 2025-08-20
 :page-revdate: {revdate}
 :keywords: ["rancher helm chart", "rancher helm options", "rancher helm chart options", "helm chart rancher", "helm options rancher", "helm chart options rancher"]
 
@@ -224,7 +224,7 @@ You can collect this log as you would any container log. Enable xref:observabili
 
 [,plain]
 ----
---set auditLog.level=1
+--set auditLog.enabled=true --set auditLog.level=1
 ----
 
 By default enabling Audit Logging will create a sidecar container in the Rancher pod. This container (`rancher-audit-log`) will stream the log to `stdout`. You can collect this log as you would any container log. When using the sidecar as the audit log destination, the `hostPath`, `maxAge`, `maxBackups`, and `maxSize` options do not apply. It's advised to use your OS or Docker daemon's log rotation features to control disk space use. Enable xref:observability/logging/logging.adoc[logging] for the Rancher server cluster or System Project.
