Update extension-apiserver/requirements pages

--- a/versions/v2.12/modules/en/pages/installation-and-upgrade/requirements/requirements.adoc
+++ b/versions/v2.12/modules/en/pages/installation-and-upgrade/requirements/requirements.adoc
@@ -1,5 +1,5 @@
 = Installation Requirements
-:revdate: 2025-08-05
+:revdate: 2025-08-20
 :page-revdate: {revdate}
 :description: Learn the node requirements for each node running Rancher server when you’re configuring  Rancher to run either in a Docker or Kubernetes setup
 
@@ -20,6 +20,8 @@ See our page on xref:installation-and-upgrade/best-practices/tips-for-running-ra
 == Kubernetes Compatibility with Rancher
 
 Rancher needs to be installed on a supported Kubernetes version. Consult the https://www.suse.com/suse-rancher/support-matrix/all-supported-versions[Rancher support matrix] to ensure that your intended version of Kubernetes is supported.
+
+Regardless of version and distribution, the Kubernetes cluster must have the aggregation API layer properly configured to support the xref:api/extension-apiserver.adoc[extension API] used by Rancher.
 
 === Install Rancher on a Hardened Kubernetes cluster
 
